--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,44 +1,44 @@
 body {
-  font-family: helvetica, sans-serif;
-  font-size: 20px;
-  max-width: 1900px;
-  margin: 0 auto;
-  background-color: white;
+    font-family: helvetica, sans-serif;
+    font-size: 20px;
+    max-width: 1900px;
+    margin: 0 auto;
+    background-color: white;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
-  cursor: pointer;
-  color: #3a3a3a;
+    text-decoration: none;
+    cursor: pointer;
+    color: #3a3a3a;
 }
 
 .nav a {
-  display: block;
-  transition: 0.2s;
+    display: block;
+    transition: 0.2s;
 }
 
 .nav a:hover {
-  color: #3a3a3a;
-  transition: 0, 2s;
-  transform: scale(1.1);
+    color: #3a3a3a;
+    transition: 0, 2s;
+    transform: scale(1.1);
 }
 
 #top {
-  position: relative;
+    position: relative;
 }
 
 .logo {
-  width: 10%;
-  height: 10%;
+    width: 10%;
+    height: 10%;
 }
 
 svg:hover {
-  fill: #3a3a3a;
-  transition: 0, 2s;
+    fill: #3a3a3a;
+    transition: 0, 2s;
 }
 
 /* 
@@ -46,46 +46,46 @@ svg:hover {
   */
 
 .navigation {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
-  font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-size: 20px;
 }
 
 .nav_content {
-  margin: 0 20px;
-  list-style: none;
+    margin: 0 20px;
+    list-style: none;
 }
 
 .nav_icons {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .icon {
-  margin: 0 20px;
+    margin: 0 20px;
 }
 
 .burger_icon {
-  display: none;
+    display: none;
 }
 
 nav ul {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
 }
 
 .nav {
-  position: fixed;
-  z-index: 10;
-  width: 100%;
-  background-color: #f1e5e6;
-  transition: height 0.3s ease-in-out;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    background-color: #f1e5e6;
+    transition: height 0.3s ease-in-out;
 }
 
 /* 
@@ -93,195 +93,227 @@ nav ul {
 */
 
 main {
-  max-width: 1200px;
-  margin: 0 auto;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 h1 {
-  color: #e4dadb;
-  font-size: 50px;
+    color: #e4dadb;
+    font-size: 50px;
 }
 
-.subheader{
-  text-align:center;
-  padding-bottom: 20px;
+.subheader {
+    text-align: center;
+    padding-bottom: 20px;
 }
 
-.budget p{
-  text-align: center;
+.budget p {
+    text-align: center;
     padding-bottom: 30px;
     border-bottom: solid 4px #f1e5e6;
 }
 
 .main-content {
-  padding-top: 150px;
-  display: flex;
+    padding-top: 150px;
+    display: flex;
 }
 
-.main{
-  padding-top: 150px;
+.main {
+    padding-top: 150px;
 }
 
-.main-p{
-  text-align: center;
+.main-p {
+    text-align: center;
 }
 
 .main-header {
-  background-color: #3a3a3a;
-  color: #e4dadb;
-  text-align: center;
-  padding: 60px;
-  align-self: center;
-  margin-top: auto;
+    background-color: #3a3a3a;
+    color: #e4dadb;
+    text-align: center;
+    padding: 60px;
+    align-self: center;
+    margin-top: auto;
 }
 
-.main-svg{
-  display: flex;
-  justify-content: space-between;
-  padding: 0px;
+.main-svg {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px;
 }
 
-.main-svg svg{
-  width: 50%;
+.main-svg svg {
+    width: 50%;
 }
 
-.main-svg li{
-  border: solid 3px white;
-  padding: 70px;
-  margin: 40px;
-  text-align: center;
+.main-svg li {
+    border: solid 3px white;
+    padding: 70px;
+    margin: 40px;
+    text-align: center;
 }
 
-input,textarea {
+input,
+textarea {
+    padding: 5px;
+    margin: 5px;
+    border: 5px solid white;
+    text-align: center;
+    font-size: 20px;
+}
+
+.input {
   padding: 5px;
   margin: 5px;
-  border: 5px solid white;
   text-align: center;
   font-size: 20px;
+  border: solid 5px #f1e5e6;
 }
 
-
 button {
-  z-index: 10;
-  border: 2px solid #3a3a3a;
-  background-color: #3a3a3a;
-  color: #f1e5e6;
-  text-align: center;
-  align-self: center;
-  cursor: pointer;
-  margin: 5px;
-  padding: 5px;
-  transition: 0.3s;
-  font-size: 18px;
+    z-index: 10;
+    border: 2px solid #3a3a3a;
+    background-color: #3a3a3a;
+    color: #f1e5e6;
+    text-align: center;
+    align-self: center;
+    cursor: pointer;
+    margin: 5px;
+    padding: 5px;
+    transition: 0.3s;
+    font-size: 18px;
 }
 
 button:hover {
-  color: #3a3a3a;
-  background-color: #f1e5e6;
-  border: 2px solid #f1e5e6;
-  transform: scale(1.1);
+    color: #3a3a3a;
+    background-color: #f1e5e6;
+    border: 2px solid #f1e5e6;
+    transform: scale(1.1);
 }
 
 button:focus {
-  transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .main-form {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 100px;
-  background-color: #f1e5e6;
-
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+    background-color: #f1e5e6;
 }
 
 .main-body {
-  background-color: #f1e5e6;
+    background-color: #f1e5e6;
 }
 
 form {
-  border: solid 3px white;
-  padding: 70px;
-  margin: 40px;
+    border: solid 3px white;
+    padding: 70px;
+    margin: 40px;
+    background-color: #f1e5e6;
 }
 
 h2 {
-  align-self: center;
+    align-self: center;
 }
 .main-text {
-  text-align: center;
-  margin-top: 80px;
+    text-align: center;
+    margin-top: 80px;
 }
-
 
 .checklist {
-  text-align: center;
-  border: solid 3px #f1e5e6;
-  padding: 70px;
-  margin: 40px;
+    text-align: center;
+    border: solid 3px #f1e5e6;
+    padding: 70px;
+    margin: 40px;
 }
 
-.checklist li{
-  padding: 15px;
-  box-shadow: 2px 2px 9px -3px rgba(0,0,0,0.5);
-  background-color: white;
-  margin: 15px;
-  display:flex;
+.checklist li {
+    padding: 15px;
+    box-shadow: 2px 2px 9px -3px rgba(0, 0, 0, 0.5);
+    background-color: white;
+    margin: 15px;
+    display: flex;
 }
 
-.checklist svg{
-  width: 2%;
-  padding-right: 25px;
+.checklist svg {
+    width: 3%;
+    padding-right: 25px;
 }
 
 .inspiration img {
-  padding: 70px 0;
+    padding: 70px 0;
 }
 
 .change:hover {
-  z-index: 10;
+    z-index: 10;
+}
+
+.budgetrechner {
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .inspiration {
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  position: relative;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: relative;
+}
+
+.main-budgetrechner .budgetrechner li {
+    flex-basis: 33, 3%;
 }
 
 .main-inspiration .inspiration li {
-  flex-basis: 33, 3%;
+    flex-basis: 33, 3%;
+}
+
+.budgetrechner div {
+    background-color: #e4dadb;
+    color: #3a3a3a;
+    text-align: center;
+    z-index: -1;
+    height: 110px;
+    align-self: center;
+    width: 530px;
 }
 
 .inspiration div {
-  background-color: #e4dadb;
-  color: #3a3a3a;
-  text-align: center;
-  position: absolute;
-  z-index: -1;
-  height: 330px;
-  align-self: center;
-  width: 530px;
-  margin-top: -20px;
+    background-color: #e4dadb;
+    color: #3a3a3a;
+    text-align: center;
+    position: absolute;
+    z-index: -1;
+    height: 330px;
+    align-self: center;
+    width: 530px;
+    margin-top: -20px;
 }
 
-.aboutme{
-  display: flex;
-  justify-content: space-between;
+.aboutme {
+    display: flex;
+    justify-content: space-between;
 }
 
-.aboutme img{
-  width: 45%;
-  flex-basis: 45%;
+.aboutme img {
+    width: 45%;
+    flex-basis: 45%;
 }
 
-.aboutme p{
-  flex-basis: 50%;
+.aboutme p {
+    flex-basis: 50%;
 }
 
-.budget{
-  flex-basis: 50%;
-  justify-content: space-between;
+.budget {
+    flex-basis: 50%;
+    justify-content: space-between;
+}
+
+.budgetrechner {
+    text-align: center;
 }
 
 /*
@@ -289,43 +321,43 @@ FOOTER
 */
 
 footer {
-  background-color: #3a3a3a;
-  color: #ffffff;
-  padding: 30px 0;
-  margin-top: 70px;
+    background-color: #3a3a3a;
+    color: #ffffff;
+    padding: 30px 0;
+    margin-top: 70px;
 }
 
 .to-top {
-  text-align: center;
+    text-align: center;
 }
 
 .footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .footer-text ul {
-  display: flex;
+    display: flex;
 }
 
 .footer-text ul li {
-  margin: 20px;
+    margin: 20px;
 }
 
 .footersvg {
-  fill: #ffffff;
-  cursor: pointer;
-  height: 35px;
-  width: 35px;
+    fill: #ffffff;
+    cursor: pointer;
+    height: 35px;
+    width: 35px;
 }
 
-.footerlink{
-  color: #f1e5e6;
+.footerlink {
+    color: #f1e5e6;
 }
 
-.footerlogo{
-  width: 50%;
+.footerlogo {
+    width: 50%;
 }
