--- a/public/css/main.css
+++ b/public/css/main.css
@@ -205,12 +205,14 @@ button:focus {
     background-color: #f1e5e6;
 }
 
+
 form {
     border: solid 3px white;
     padding: 70px;
     margin: 40px;
     background-color: #f1e5e6;
 }
+
 
 h2 {
     align-self: center;
@@ -247,7 +249,6 @@ h2 {
 .change:hover {
     z-index: 10;
 }
-
 
 .inspiration {
     padding: 0;
@@ -305,6 +306,7 @@ h2 {
 
 .budgetrechner {
     text-align: center;
+    padding: 0;
 }
 
 /*
