--- a/public/css/main.css
+++ b/public/css/main.css
@@ -119,7 +119,7 @@ h1 {
 }
 
 .main {
-    padding-top: 150px;
+    padding-top: 80px;
 }
 
 .main-p {
@@ -166,7 +166,7 @@ textarea {
   margin: 5px;
   text-align: center;
   font-size: 20px;
-  border: solid 5px #f1e5e6;
+  border: solid 2px #f1e5e6;
 }
 
 button {
@@ -199,6 +199,7 @@ button:focus {
     justify-content: space-around;
     margin-top: 100px;
     background-color: #f1e5e6;
+    margin-bottom: 100px;
 }
 
 .main-body {
