--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ a {
 }
 
 .logo {
-    width: 10%;
+    width: 13%;
     height: 10%;
 }
 
@@ -281,16 +281,17 @@ h3 {
 }
 
 .checklist li {
-    padding: 20px;
+    padding: 25px;
     box-shadow: 2px 2px 9px -3px rgba(0, 0, 0, 0.5);
     background-color: white;
-    margin: 20px;
+    margin: 25px;
     display: flex;
+    justify-content: space-between;
 }
 
 .checklist svg {
     width: 3%;
-    padding-right: 25px;
+   
 }
 
 .inspiration img {
@@ -391,7 +392,7 @@ footer {
 }
 
 .footer-content {
-    max-width: 1900px;
+    max-width: 1200px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
