--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: "Open Sans", sans-serif;
-    font-size: 20px;
+    font-size: 1.3rem;
     max-width: 1900px;
     margin: 0 auto;
     background-color: white;
@@ -56,7 +56,7 @@ svg:hover {
     justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
-    font-size: 20px;
+    font-size: 1.3rem;
 }
 
 .nav_content {
@@ -153,8 +153,9 @@ h1 {
 
 .budget p {
     text-align: center;
-    padding-bottom: 30px;
-    border-bottom: solid 4px #f1e5e6;
+    padding-bottom: 40px;
+    margin-bottom: 50px;
+    border-bottom: solid 5px #f1e5e6;
 }
 
 .main-content {
@@ -196,21 +197,31 @@ h1 {
     text-align: center;
 }
 
+label{
+    font-size: 1.3rem;
+    transition: all 0.2s ease;
+}
+
 input,
 textarea {
-    padding: 5px;
-    margin: 5px;
     border: 5px solid white;
+    padding: 5px;
+    margin: 15px;
+    border: 5px solid white;
+    color: #f1e5e6;
     text-align: center;
-    font-size: 20px;
+    transition: 0.3s ease-in-out;
+    font-size: 1.3rem;
 }
 
 .input {
+    border: solid 5px #f1e5e6;
     padding: 5px;
-    margin: 5px;
+    margin: 15px;
+    color: #f1e5e6;
     text-align: center;
-    font-size: 20px;
-    border: solid 2px #f1e5e6;
+    transition: 0.3s ease-in-out;
+    font-size: 1.3rem;
 }
 
 button {
@@ -221,10 +232,10 @@ button {
     text-align: center;
     align-self: center;
     cursor: pointer;
-    margin: 5px;
-    padding: 5px;
-    transition: 0.3s;
-    font-size: 18px;
+    transition: 0.3s ease-in-out;
+    font-size: 1.3rem;
+    padding: 1rem 2rem;
+    margin: 1rem;
 }
 
 button:hover {
@@ -250,7 +261,7 @@ button:focus {
     background-color: #f1e5e6;
 }
 
-form {
+.form {
     border: solid 3px white;
     padding: 70px;
     margin: 40px;
@@ -359,20 +370,23 @@ h3 {
     margin-bottom: 50px;
 }
 
-.socialmedia {
-    display: flex;
-    justify-content: center;
+.blog{
+    background: url(../assets/blog.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: soft-light;
+    max-width: inherit;
 }
 
-.socialmedia li {
-    width: 5%;
-    margin: 20px;
+.blog_text{
+    text-align: center;
+    border: solid 5px #f1e5e6;
+    padding: 50px;
+    margin: 35px;
+    background-color: rgba(241, 228, 230, 0.65);
 }
 
-.socialmedia svg {
-    fill: #3a3a3a;
-    cursor: pointer;
-}
+
 
 /*
 FOOTER
