--- a/public/css/main.css
+++ b/public/css/main.css
@@ -197,7 +197,7 @@ h1 {
     text-align: center;
 }
 
-label{
+label {
     font-size: 1.3rem;
     transition: all 0.2s ease;
 }
@@ -358,6 +358,52 @@ h3 {
     margin-top: -20px;
 }
 
+.content img {
+    left: 50%;
+    transform: translate3d(0, 0, 0);
+    animation: zoomin 1s ease;
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+}
+
+.gallery {
+    display: grid;
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+.gallery img {
+    max-width: 100%;
+    box-shadow: 0 0 16px #333;
+    transition: all 1.5s ease;
+}
+.gallery img:hover {
+    box-shadow: 0 0 32px #333;
+}
+.gallery .content {
+    padding: 4px;
+}
+.gallery .gallery-item {
+    transition: grid-row-start 300ms linear;
+    transition: transform 300ms ease;
+    transition: all 0.5s ease;
+    cursor: pointer;
+}
+.gallery .gallery-item:hover {
+    transform: scale(1.025);
+}
+@media (max-width: 600px) {
+    .gallery {
+        grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
+    }
+}
+@media (max-width: 400px) {
+    .gallery {
+        grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+    }
+}
+
 .aboutme {
     display: flex;
     justify-content: space-between;
@@ -381,7 +427,7 @@ h3 {
     margin-bottom: 50px;
 }
 
-.blog{
+.blog {
     background: url(../assets/blog.jpg);
     background-size: cover;
     background-position: center;
@@ -389,7 +435,7 @@ h3 {
     max-width: inherit;
 }
 
-.blog_text{
+.blog_text {
     text-align: center;
     border: solid 5px #f1e5e6;
     padding: 50px;
@@ -397,7 +443,7 @@ h3 {
     background-color: rgba(241, 228, 230, 0.65);
 }
 
-.errorpage{
+.errorpage {
     background: url(../assets/404.jpg);
     background-size: cover;
     background-position: center;
@@ -405,17 +451,15 @@ h3 {
     max-width: inherit;
 }
 
-.errortext{
+.errortext {
     margin-top: 450px;
     font-size: larger;
     padding-bottom: 50px;
 }
 
-.errorheader{
+.errorheader {
     color: #3a3a3a;
 }
-
-
 
 /*
 FOOTER
