--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,6 +89,26 @@ nav ul {
     transition: height 0.3s ease-in-out;
 }
 
+.nav ul li{
+    opacity: 0;
+    animation-name: bounceIn;
+    animation-duration: 450ms;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+  }
+  
+  .nav ul li:nth-child(2){
+    animation-delay: .20s;
+  }
+  
+  .nav ul li:nth-child(3){
+    animation-delay: 0.50s;
+  }
+  
+  .nav ul li:nth-child(4){
+    animation-delay: 1s;
+  }
+
 .nav-mobile {
     font-size: 40px;
     flex-direction: column;
@@ -470,6 +490,11 @@ h3 {
     color: #3a3a3a;
 }
 
+.changer {
+    opacity: 0;
+    z-index: 2;
+  }
+
 /*
 FOOTER
 */
@@ -531,3 +556,24 @@ footer {
         display: inline-flex;
     }
 }
+
+
+@keyframes bounceIn{
+    0%{
+      opacity: 0;
+      transform: scale(0.3) translate3d(0,0,0);
+    }
+    50%{
+      opacity: 0.9;
+      transform: scale(1.1);
+    }
+    80%{
+      opacity: 1;
+      transform: scale(0.89);
+    }
+    100%{
+      opacity: 1;
+      transform: scale(1) translate3d(0,0,0);
+    }
+  }
+
