--- a/public/css/main.css
+++ b/public/css/main.css
@@ -333,7 +333,7 @@ h3 {
     margin: 40px;
 }
 
-.checklist li {
+.checklist_item {
     padding: 25px;
     box-shadow: 2px 2px 9px -3px rgba(0, 0, 0, 0.5);
     background-color: white;
@@ -342,9 +342,15 @@ h3 {
     justify-content: space-between;
 }
 
+.checklist_item:hover{
+    transition: 0.3s ease-in-out;
+    transform: scale(1.1);
+}
+
 .checklist svg {
     width: 3%;
 }
+
 
 .inspiration img {
     padding: 80px 0;
