--- a/public/css/main.css
+++ b/public/css/main.css
@@ -347,14 +347,6 @@ h3 {
     transform: scale(1.1);
 }
 
-.checklist svg {
-    width: 3%;
-}
-
-.checked {
-    color: green;
-}
-
 .inspiration img {
     padding: 80px 0;
 }
@@ -594,4 +586,8 @@ footer {
         opacity: 1;
         transform: scale(1) translate3d(0, 0, 0);
     }
+}
+
+.cursor-pointer{
+    cursor: pointer;
 }
