--- a/public/css/main.css
+++ b/public/css/main.css
@@ -196,7 +196,7 @@ h1 {
     background-color: #3a3a3a;
     color: #e4dadb;
     text-align: center;
-    padding: 60px;
+    padding: 55px;
     align-self: center;
     margin-top: auto;
 }
@@ -588,9 +588,13 @@ footer {
     }
 }
 
-.cursor-pointer{
+.cursor-pointer {
     cursor: pointer;
 }
+
+/*
+Table
+*/
 
 .table {
     max-width: 1200px;
@@ -601,15 +605,15 @@ footer {
 .table td,
 .table th {
     padding: 15px;
-  text-align: center;
+    text-align: center;
 }
 .table td:first-child,
 .table th:first-child {
-  width: 20%;
+    width: 20%;
 }
 .table td:last-child,
 .table th:last-child {
-  border-right: none;
+    border-right: none;
 }
 .table th {
     border-bottom: 1px solid #97aab2;
@@ -617,73 +621,86 @@ footer {
     color: #ffffff;
 }
 .table tbody tr:nth-child(even) {
-      background-color: #f1e5e6;
+    background-color: #f1e5e6;
 }
 
 @media (max-width: 500px) {
-  .table {
-    display: flex;
-    overflow: hidden;
-    position: relative;
-  }
-  .table::after {
-    content: '';
-    width: 10px;
-    background: linear-gradient(to left, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%) 0 center;
-    background-repeat: no-repeat;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 1;
-  }
-  .table thead {
-    display: flex;
-    flex-shrink: 0;
-    position: relative;
-  }
-  .table thead::after {
-    content: '';
-    width: 10px;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%) 0 center;
-    background-repeat: no-repeat;
-    position: absolute;
-    left: 100%;
-    top: 0;
-    bottom: 0;
-    z-index: 1;
-  }
-  .table tbody {
-    display: flex;
-    position: relative;
-    overflow-x: auto;
-    overflow-y: hidden;
-    -webkit-overflow-scrolling: touch;
-  }
-  .table tr {
-    display: flex;
-    flex-direction: column;
-    flex-shrink: 0;
-    position: relative;
-    z-index: -1;
-  }
-  .table td {
-    border-right: 0;
-  }
-  .table th {
-    text-align: left;
-  }
-  .table th,
-  .table th:last-child {
-    border-right: 1px solid #97aab2;
-  }
-  .table td, .table th {
-    border-bottom: 1px solid #97aab2;
-  }
-  .table td:first-child, .table th:first-child {
-    width: auto;
-  }
-  .table td:last-child, .table th:last-child {
-    border-bottom: 0;
-  }
+    .table {
+        display: flex;
+        overflow: hidden;
+        position: relative;
+    }
+    .table::after {
+        content: "";
+        width: 10px;
+        background: linear-gradient(
+                to left,
+                rgba(0, 0, 0, 0.2) 0%,
+                rgba(0, 0, 0, 0) 100%
+            )
+            0 center;
+        background-repeat: no-repeat;
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 1;
+    }
+    .table thead {
+        display: flex;
+        flex-shrink: 0;
+        position: relative;
+    }
+    .table thead::after {
+        content: "";
+        width: 10px;
+        background: linear-gradient(
+                to right,
+                rgba(0, 0, 0, 0.2) 0%,
+                rgba(0, 0, 0, 0) 100%
+            )
+            0 center;
+        background-repeat: no-repeat;
+        position: absolute;
+        left: 100%;
+        top: 0;
+        bottom: 0;
+        z-index: 1;
+    }
+    .table tbody {
+        display: flex;
+        position: relative;
+        overflow-x: auto;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
+    }
+    .table tr {
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 0;
+        position: relative;
+        z-index: -1;
+    }
+    .table td {
+        border-right: 0;
+    }
+    .table th {
+        text-align: left;
+    }
+    .table th,
+    .table th:last-child {
+        border-right: 1px solid #97aab2;
+    }
+    .table td,
+    .table th {
+        border-bottom: 1px solid #97aab2;
+    }
+    .table td:first-child,
+    .table th:first-child {
+        width: auto;
+    }
+    .table td:last-child,
+    .table th:last-child {
+        border-bottom: 0;
+    }
 }
