--- a/public/css/main.css
+++ b/public/css/main.css
@@ -347,6 +347,10 @@ h3 {
     transform: scale(1.1);
 }
 
+.checked{
+    background-color: rgba(241, 228, 230, 0.66);
+}
+
 .inspiration img {
     padding: 80px 0;
 }
