--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,6 @@ a {
 }
 
 .nav a {
-    display: block;
     transition: 0.2s;
 }
 
@@ -140,16 +139,21 @@ nav ul {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 700px) {
-    .navbar-nav {
+    .nav-nav .nav-content{
         display: none;
+    }
+
+    .inspiration{
+        justify-content: center;
     }
 }
 
 @media only screen and (min-width: 700px) {
-    .burger {
-        display: none;
+    .menu{
+        display:none;
     }
 }
+
 
 /* 
   Main
@@ -715,3 +719,5 @@ Table
         border-bottom: 0;
     }
 }
+
+
