--- a/public/css/main.css
+++ b/public/css/main.css
@@ -138,7 +138,7 @@ nav ul {
     width: 20px;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 700px) {
+@media only screen and (min-width: 320px) and (max-width: 800px) {
     .nav-nav .nav-content {
         display: none;
     }
@@ -162,9 +162,40 @@ nav ul {
         width: 50%;
         display: block;
     }
+    .main-form{
+        flex-direction: column;
+    }
+
+    form{
+        align-self: center;
+    }
+
+    .footer-content{
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    .aboutme{
+        display: block;
+    }
+
+    .aboutme img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    }
+
+    .datenschutz{
+        text-align: center;
+    }
+
+    .budgetrechner{
+        flex-direction: column;
+    }
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 800px) {
     .menu {
         display: none;
     }
@@ -563,6 +594,7 @@ footer {
 
 .footer-text ul {
     display: flex;
+    padding: 0;
 }
 
 .footer-text ul li {
