--- a/public/css/main.css
+++ b/public/css/main.css
@@ -138,7 +138,7 @@ nav ul {
     width: 20px;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 800px) {
+@media  (min-width: 400px) and (max-width: 800px) {
     .nav-nav .nav-content {
         display: none;
     }
@@ -195,7 +195,7 @@ nav ul {
     }
 }
 
-@media only screen and (min-width: 800px) {
+@media (min-width: 800px) {
     .menu {
         display: none;
     }
