--- a/public/css/main.css
+++ b/public/css/main.css
@@ -138,7 +138,7 @@ nav ul {
     width: 20px;
 }
 
-@media  (min-width: 400px) and (max-width: 800px) {
+@media only screen and (min-device-width: 370px) and (max-device-width: 800px) {
     .nav-nav .nav-content {
         display: none;
     }
@@ -195,7 +195,7 @@ nav ul {
     }
 }
 
-@media (min-width: 800px) {
+@media only screen and (min-device-width: 800px) {
     .menu {
         display: none;
     }
