--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,7 +109,6 @@ nav ul {
 }
 
 .nav-mobile {
-    font-size: 40px;
     flex-direction: column;
 }
 
@@ -126,7 +125,7 @@ nav ul {
 }
 
 .mobile-content {
-    padding: 20px;
+    padding: 10px;
 }
 
 .display {
@@ -139,8 +138,16 @@ nav ul {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 800px) {
-    .nav-content {
+    .nav-nav .nav_content {
         display: none;
+    }
+
+     .navbar-nav{
+        flex-direction: column-reverse;
+    }
+
+    .logo{
+        width: 35%;
     }
 
     .inspiration {
@@ -635,6 +642,7 @@ footer {
 
     .footer-text ul {
         display: inline-flex;
+        margin: 0;
     }
 }
 
