--- a/public/css/main.css
+++ b/public/css/main.css
@@ -587,8 +587,7 @@ RESPONSIVE
     }
 
     .change {
-        width: 100%;
-        height: auto;
+        max-width: 100%;
     }
 
     .main-svg {
