--- a/public/css/main.css
+++ b/public/css/main.css
@@ -356,7 +356,12 @@ h3 {
 }
 
 .main-budgetrechner .budgetrechner li {
-    flex-basis: 45%;
+    display: flex;
+    border: solid;
+    border-width: 0px 0 2px;
+    border-style: solid;
+    border-color: #f1e5e6;
+    justify-content: space-between;
 }
 
 .main-inspiration .inspiration li {
@@ -369,10 +374,7 @@ h3 {
 }
 
 .budgetrechner div {
-    border: solid;
-    border-width: 0px 0 2px;
-    border-style: solid;
-    border-color: #f1e5e6;
+    align-self: center;
 }
 
 .inspiration div {
@@ -454,9 +456,6 @@ h3 {
     text-align: center;
     padding: 0;
     margin-bottom: 50px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 .blog {
@@ -660,6 +659,10 @@ RESPONSIVE
     .checklist{
         margin: 20px;
         padding: 0;
+    }
+
+    .main-budgetrechner .budgetrechner li{
+        flex-direction: column;
     }
 }
 
