--- a/public/css/main.css
+++ b/public/css/main.css
@@ -487,7 +487,7 @@ h3 {
     background-size: cover;
     background-color: #3a3a3a;
     background-position: center;
-    background-blend-mode: soft-light;
+    background-blend-mode: exclusion;
     max-width: inherit;
 }
 
@@ -522,6 +522,7 @@ footer {
     background-color: #3a3a3a;
     color: #ffffff;
     padding: 30px 0;
+    margin-top: 100px;
 }
 
 .to-top {
