--- a/public/css/main.css
+++ b/public/css/main.css
@@ -416,6 +416,7 @@ h3 {
     grid-column-gap: 8px;
     grid-row-gap: 8px;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    padding-bottom: 80px;
 }
 .gallery img {
     max-width: 100%;
